Fixed issue with text bar falling off the edge of the frame

--- a/frontend/page.html
+++ b/frontend/page.html
@@ -43,16 +43,18 @@
             padding: 12px 16px;
             background: #0a0a0a;
             display: flex;
+            flex-direction: column;
             gap: 10px;
         }
         /* Input field */
         #input { 
-            flex: 1;
+            width: 100%;
             padding: 10px;
             background: #0a0a0a;
             border: 1px solid rgb(0, 221, 255);
             color: rgb(0, 221, 255);
             outline: none;
+            box-sizing: border-box;
         }
         /* Send button */
         button {
