Adding error messages

--- a/frontend/page.html
+++ b/frontend/page.html
@@ -38,6 +38,7 @@
         .user { color: #fff; }
         .assistant { color: rgb(0, 221, 255); }
         .system { color: rgb(255, 165, 0); font-style: italic; }
+        .error { color: rgb(255, 100, 100); font-style: italic; }
         /* Input container */
         .input-container {
             padding: 12px 16px;
