Changed name and added markdown support

--- a/frontend/osiris-chat.html
+++ b/frontend/osiris-chat.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>CHAT</title>
+    <!-- Markdown support -- makes a huge difference -->
+    <script src="https://cdn.jsdelivr.net/npm/marked@9.1.2/marked.min.js"></script>
     <style>
         /* Centred layout with dark theme*/
         body { 
